--- a/config.json
+++ b/config.json
@@ -1,4 +1,8 @@
 {
   "prefix": "!",
-  "token": "bot-token"
+  "token": "bot-token<",
+  "reactions": {
+    "emoji": "\uD83D\uDC27",
+    "cooldown": 30
+  }
 }
