Add dynamic prefixes

--- a/config.json
+++ b/config.json
@@ -1,9 +1,6 @@
 {
-  "prefix": "!",
   "token": "bot-token",
   "owner": "bot-owner",
-  "reactions": {
-    "emoji": "\uD83D\uDC27",
-    "cooldown": 30
-  }
+  "prefixes": ["!", "?", "*", "#"],
+  "reaction_cooldown": 30
 }
